--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-hook/window-scroll": "^1.3.0",
+    "classnames": "^2.3.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
