--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.11.2",
     "@react-hook/window-scroll": "^1.3.0",
     "@types/react-input-mask": "^3.0.1",
+    "@vessell/sdk": "^0.12.0-alpha.1",
     "classnames": "^2.3.1",
     "locomotive-scroll": "^4.1.3",
     "moment": "^2.29.1",
