--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "classnames": "^2.3.1",
     "locomotive-scroll": "^4.1.3",
     "moment": "^2.29.1",
-    "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-locomotive-scroll": "^0.2.0"
   },
