--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@emotion/cache": "^11.10.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.4",
     "@react-hook/window-scroll": "^1.3.0",
     "@types/react-input-mask": "^3.0.1",
     "@vessell/sdk": "^0.12.0-alpha.1",
     "classnames": "^2.3.1",
     "locomotive-scroll": "^4.1.4",
     "moment": "^2.29.1",
-    "next": "^12.2.3",
+    "next": "^12.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
