--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@mui/material": "^5.10.4",
     "@react-hook/window-scroll": "^1.3.0",
     "@types/react-input-mask": "^3.0.1",
-    "@vessell/sdk": "^0.30.0-alpha.1",
+    "@vessell/sdk": "^0.32.0-alpha.1",
     "classnames": "^2.3.1",
     "moment": "^2.29.1",
     "next": "^12.3.0",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.1",
     "react-input-mask": "^2.0.4",
     "react-query": "^3.39.2"
   },
